# airssys

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  PROJECTS_STANDARD.md  README.md  consumer.wit  index.html  sitemap.xml  task-summary-fix-traits-to-generics.md
airssys-osl/: Cargo.toml  README.md
airssys-osl-macros/: Cargo.toml  README.md
airssys-osl-macros/src/: executor.rs  lib.rs  utils.rs
airssys-osl-macros/tests/: integration.rs
airssys-osl-macros/tests/ui/: .gitkeep
airssys-osl-macros/tests/unit/: mapping_tests.rs
airssys-osl/docs/: book.toml
airssys-osl/docs/src/: SUMMARY.md  introduction.md
airssys-osl/examples/: basic_usage.rs  composition_basic.rs  composition_pipeline.rs  composition_service.rs  custom_executor_with_macro.rs  custom_middleware.rs  helper_functions.rs  helper_functions_comprehensive.rs  logger_comprehensive.rs  middleware_extension.rs  middleware_pipeline.rs  security_middleware_comprehensive.rs
airssys-osl/src/: helpers.rs  lib.rs  prelude.rs
airssys-osl/src/core/: context.rs  executor.rs  middleware.rs  mod.rs  operation.rs  result.rs  security.rs
airssys-osl/src/executors/: mod.rs
airssys-osl/src/framework/: builder.rs  config.rs  framework.rs  mod.rs  operations.rs  pipeline.rs  registry.rs
airssys-osl/src/helpers/: composition.rs  context.rs  factories.rs  mod.rs  simple.rs
airssys-osl/src/middleware/: ext.rs  mod.rs
airssys-osl/src/operations/: filesystem.rs  mod.rs  network.rs  process.rs
airssys-osl/tests/: composition_basic_tests.rs  composition_chaining_tests.rs  composition_error_tests.rs  composition_integration_tests.rs  filesystem_operations_tests.rs  helpers_audit_tests.rs  helpers_error_tests.rs  helpers_security_tests.rs  integration_tests.rs  logger_tests.rs  macro_accessibility_test.rs  macro_config_tests.rs  macro_integration_tests.rs  network_operations_tests.rs  process_operations_tests.rs  security_middleware_tests.rs  security_threat_tests.rs
airssys-rt/: BENCHMARKING.md  Cargo.toml  README.md
airssys-rt/benches/: actor_benchmarks.rs  message_benchmarks.rs  resource_benchmarks.rs  supervisor_benchmarks.rs
airssys-rt/docs/: book.toml
airssys-rt/docs/src/: SUMMARY.md  api.md  explanation.md  guides.md  implementation.md  introduction.md  researches.md  tutorials.md
airssys-rt/examples/: README.md  actor_basic.rs  actor_lifecycle.rs  actor_patterns.rs  event_pipeline.rs  getting_started.rs  message_patterns.rs  monitoring_basic.rs  monitoring_supervisor.rs  osl_integration_example.rs  supervisor_advanced.rs  supervisor_automatic_health.rs  supervisor_basic.rs  supervisor_builder_phase1.rs  supervisor_builder_phase2.rs  supervisor_strategies.rs  worker_pool.rs
airssys-rt/src/: lib.rs  prelude.rs
airssys-rt/src/actor/: context.rs  lifecycle.rs  mod.rs  traits.rs
airssys-rt/tests/: TODO_OSL_INTEGRATION_TESTS.md  monitoring_tests.rs  osl_actors_tests.rs  supervisor_hierarchy_tests.rs
airssys-wasm/: .gitignore  BENCHMARKING.md  Cargo.toml  README.md  TASK_2.1_REFACTORING_SUMMARY.md  build.rs  build.rs.template
airssys-wasm-cli/: Cargo.toml  README.md
airssys-wasm-cli/src/: cli_config.rs  error.rs  main.rs  utils.rs
airssys-wasm-component/: Cargo.toml  README.md
airssys-wasm-component/src/: codegen.rs  component.rs  derive.rs  lib.rs  utils.rs
airssys-wasm-component/tests/: integration.rs
airssys-wasm/benches/: actor_lifecycle_benchmarks.rs  capability_check_benchmarks.rs  capability_check_benchmarks.rs.bak3  component_execution.rs  component_loading.rs  crash_handling_benchmarks.rs  execution_benchmarks.rs  fire_and_forget_benchmarks.rs  fire_and_forget_benchmarks.rs.bak  instantiation_benchmarks.rs  memory_benchmarks.rs  messaging_benchmarks.rs  messaging_benchmarks.rs.bak2  messaging_benchmarks.rs.bak3  routing_benchmarks.rs  scalability_benchmarks.rs  security_benchmarks.rs
airssys-wasm/docs/: book.toml
airssys-wasm/examples/: actor_routing_example.rs  actor_routing_example.rs.bak4  actor_supervision_example.rs  basic_component_actor.rs  component_composition.rs  fire_and_forget_messaging.rs  fire_and_forget_messaging.rs.bak3  pubsub_component.rs  request_response_pattern.rs  request_response_pattern.rs.bak4  security_approval_devmode.rs  security_approval_devmode.rs.bak3  security_approval_devmode.rs.bak4  security_approval_review.rs  security_approval_trusted.rs  security_approval_trusted.rs.bak3  security_approval_trusted.rs.bak5  security_trust_basic.rs  security_trust_config.rs  security_trust_config.rs.bak3  security_trust_devmode.rs.bak4  stateful_component.rs  stateful_component.rs.bak3  supervised_component.rs  supervisor_node_integration.rs
airssys-wasm/src/: lib.rs  prelude.rs
airssys-wasm/tests/: actor_invocation_tests.rs  actor_invocation_tests.rs.bak3  actor_routing_tests.rs  actor_routing_tests.rs.bak  actor_routing_tests.rs.bak2  actor_routing_tests.rs.bak4  actor_security_tests.rs  actor_security_tests.rs.bak  actor_security_tests.rs.bak3  actor_system_pub_sub_tests.rs  actor_system_pub_sub_tests.rs.bak4  actor_system_subscriber_tests.rs  actor_system_subscriber_tests.rs.bak  actor_system_subscriber_tests.rs.bak4  airssys_limiter_integration.rs  async_execution_tests.rs  async_execution_tests.rs.bak3  capability_check_integration_tests.rs  capability_check_integration_tests.rs.bak  capability_check_integration_tests.rs.bak4  component_broker_integration_tests.rs  component_registry_tests.rs  component_registry_tests.rs.bak  component_registry_tests.rs.bak4  component_spawning_tests.rs  component_spawning_tests.rs.bak3  component_supervision_tests.rs  component_supervision_tests.rs.bak4  config_component_toml_test.rs  config_component_toml_test.rs.bak3  correlation_integration_tests.rs  correlation_integration_tests.rs.bak  correlation_integration_tests.rs.bak4  cpu_limits_execution_tests.rs  cpu_limits_execution_tests.rs.bak  cpu_limits_execution_tests.rs.bak3  crash_isolation_tests.rs  crash_isolation_tests.rs.bak  crash_isolation_tests.rs.bak4  debug_fuel_test.rs  (+82 more)
airssys-wasm/wit/: README.md  deps.toml  deps.toml.template
(+1366 files in other folders)
