[package]
name = "airssys-osl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Time handling (ยง3.2 workspace standard)
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Logging integration
tracing = { workspace = true }

# Unix process signals (Unix-only)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
# Property-based testing
proptest = { workspace = true }

# Testing utilities
tempfile = "3.8"

# Tracing subscriber for examples
tracing-subscriber = "0.3"

# Example configurations
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "logger_comprehensive"
path = "examples/logger_comprehensive.rs"

[[example]]
name = "middleware_pipeline"
path = "examples/middleware_pipeline.rs"

[lints]
workspace = true
