[package]
name = "airssys-osl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["macros"]
macros = ["dep:airssys-osl-macros"]

[dependencies]
# Procedural macros for ergonomic implementations (optional feature)
airssys-osl-macros = { workspace = true, optional = true }

# Time handling (ยง3.2 workspace standard)
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Pattern matching (for ACL security policies)
glob = { workspace = true }

# Logging integration
tracing = { workspace = true }

# Unix process signals (Unix-only)
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
# Property-based testing
proptest = { workspace = true }

# Testing utilities
tempfile = { workspace = true }

# Tracing subscriber for examples
tracing-subscriber = { workspace = true }

# Example configurations
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "logger_comprehensive"
path = "examples/logger_comprehensive.rs"

[[example]]
name = "middleware_pipeline"
path = "examples/middleware_pipeline.rs"

[[example]]
name = "custom_executor_with_macro"
path = "examples/custom_executor_with_macro.rs"

[[example]]
name = "middleware_extension"
path = "examples/middleware_extension.rs"

[[example]]
name = "helper_functions"
path = "examples/helper_functions.rs"

[[example]]
name = "security_middleware_comprehensive"
path = "examples/security_middleware_comprehensive.rs"

[[example]]
name = "custom_middleware"
path = "examples/custom_middleware.rs"

[[example]]
name = "helper_functions_comprehensive"
path = "examples/helper_functions_comprehensive.rs"

[lints]
workspace = true
