[package]
name = "airssys-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Time handling (MANDATORY ยง3.2 - chrono DateTime<Utc>)
chrono = { workspace = true }

# UUID generation for IDs
uuid = { workspace = true }

# High-performance synchronization primitives
parking_lot = { workspace = true }

# Serialization support
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Concurrent lock-free data structures
dashmap = { workspace = true }

# Random number generation for pool strategies
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
