[package]
name = "airssys-wasm-cli"
version = "0.1.0"
edition = "2021"
authors = ["AirsStack Contributors"]
license = "MIT OR Apache-2.0"
description = "Command-line tool for airssys-wasm component lifecycle management"
repository = "https://github.com/airsstack/airssys"
keywords = ["wasm", "cli", "component", "plugin", "webassembly"]
categories = ["command-line-utilities", "wasm", "development-tools"]
readme = "README.md"

[[bin]]
name = "airssys-wasm"
path = "src/main.rs"

[dependencies]
# Layer 1: AirsSys Foundation Crates (MUST be at top)
airssys-wasm = { workspace = true }

# Layer 2: Core Runtime Dependencies
tokio = { workspace = true }

# Layer 3: Serialization and Data Handling
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Layer 4: External Dependencies (by category)
# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
env_logger = { workspace = true }

# CLI user experience
colored = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }

# Cryptography (Ed25519 signing/verification)
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Git operations
git2 = { workspace = true }

# HTTP client (for URL-based installation)
reqwest = { workspace = true }

# File system utilities
walkdir = { workspace = true }

# Configuration management
dirs = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
