[package]
name = "airssys-wasm-component"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for AirsSys WASM component development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/airsstack/airssys"
keywords = ["wasm", "component", "macro", "airssys", "plugin"]
categories = ["development-tools", "wasm"]

[lib]
proc-macro = true

# TODO: Remove when placeholder implementations are completed
[lints.rust]
dead_code = "allow"

[dependencies]
# Macro development dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Core types (minimal dependency on airssys-wasm)
airssys-wasm = { path = "../airssys-wasm", default-features = false }

# Utilities
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# For testing macros
trybuild = "1.0"
airssys-wasm = { path = "../airssys-wasm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]