[package]
name = "airssys-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# WIT bindings runtime support (required by generated code) - §5.1
wit-bindgen = { workspace = true }

# Serialization (workspace dependency - §5.1)
serde = { workspace = true }

# Error handling (workspace dependency - §5.1)
thiserror = { workspace = true }

# Time handling - chrono DateTime<Utc> standard (§3.2)
chrono = { workspace = true }

# Async traits for storage, messaging, runtime interfaces (§5.1)
async-trait = { workspace = true }

# JSON serialization for Custom capability parameters (§5.1)
serde_json = { workspace = true }

# UUID for message IDs in actor.rs (§5.1)
uuid = { workspace = true }

# Tokio for async tests in security.rs and future modules
tokio = { workspace = true, features = ["macros", "rt", "fs"] }

# Wasmtime runtime dependencies (WASM-TASK-002 Phase 1) - §5.1
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

# Anyhow for Wasmtime ResourceLimiter trait (required by wasmtime API)
anyhow = { workspace = true }

# TOML parsing for Component.toml configuration (WASM-TASK-002 Phase 2)
toml = { workspace = true }

[dev-dependencies]
# WAT compiler for test fixtures (workspace dependency)
wat = { workspace = true }

# Temporary file/directory management for integration tests
tempfile = { workspace = true }

# Criterion for benchmarking
criterion = { workspace = true }

# Benchmark configuration
[[bench]]
name = "component_loading"
harness = false

[[bench]]
name = "component_execution"
harness = false

[lints]
workspace = true