[package]
name = "test-crate"
version = "0.1.0"
edition = "2021"

# Exclude from workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Runtime support for generated bindings
wit-bindgen = { version = "0.47.0", default-features = false, features = ["macros"] }

[build-dependencies]
# Build-time dependency for binding generation (not actually used in build.rs for this test)
# wit-bindgen uses proc macros, so build.rs is not needed for simple cases
